# build_angle

./: .gitignore  CMakeLists.txt  config.cmake  configure.cmd  configure.sh
cmake_inc/: ANGLEShaderProgramVersion.h  angle_commit.h  compression_utils_portable.h  platform_override.h
cmake_tools/compression_utils_portable/: CMakeLists.txt  main.cpp
cmake_tools/shim_synchapi/: CMakeLists.txt  list_entry.h  shim.c
sdk/toolchain/: mingw-amd64.cmake  mingw-i686.cmake  mingw.cmake
