cmake_minimum_required(VERSION 3.8)
project(angle CXX C)

set(CMAKE_BUILD_TYPE "Release")
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(ANGLE_SRC_DIR "${CMAKE_CURRENT_LIST_DIR}/angle_src")

include(FetchContent)

FetchContent_Declare(
    rapidjson
    GIT_REPOSITORY https://github.com/TenCent/rapidjson.git
    GIT_TAG        master
)

FetchContent_Declare(
    zlib_repo
    GIT_REPOSITORY https://chromium.googlesource.com/chromium/src/third_party/zlib.git
    GIT_TAG        main
)

set(ZLIB_CONF_WRITTEN OFF CACHE BOOL "" FORCE)
set(ZLIB_BUILD_TESTING OFF CACHE BOOL "" FORCE)
set(ZLIB_BUILD_SHARED ON CACHE BOOL "" FORCE)
set(ZLIB_BUILD_STATIC ON CACHE BOOL "" FORCE)

FetchContent_MakeAvailable(zlib_repo)
target_precompile_headers(zlib_bench PRIVATE <cstring>)

set(RAPIDJSON_BUILD_DOC OFF CACHE BOOL "" FORCE)
set(RAPIDJSON_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(RAPIDJSON_BUILD_TESTS OFF CACHE BOOL "" FORCE)

FetchContent_MakeAvailable(rapidjson)
add_subdirectory(cmake_tools/compression_utils_portable)
add_subdirectory(cmake_tools/shim_synchapi)

include(config.cmake)
include_directories(cmake_inc)

option(ANGLE_USE_FRAME_CAPTURE "build with frame capture support" OFF)
option(ANGLE_USE_VULKAN "build with vulkan support" OFF)
option(ANGLE_USE_METAL "build with metal support" OFF)
if(WINDOWS_DESKTOP AND NOT CMAKE_SYSTEM_PROCESSOR MATCHES arm)
    option(ANGLE_USE_D3D9 "build with d3d9 support" ON)
    option(ANGLE_USE_D3D11 "build with d3d11 support" ON)
    option(ANGLE_USE_GL "build with native opengl/es support via wgl" ON)
endif()

if (APPLE)
    set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -framework Cocoa -framework OpenGL -framework IOKit -framework CoreFoundation -framework IOSurface -framework QuartzCore -framework CoreGraphics")
endif()
set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS}")
set(CMAKE_STATIC_LIBRARY_PREFIX "")

add_definitions(
    -D_CRT_SECURE_NO_DEPRECATE
    -D_SCL_SECURE_NO_WARNINGS
    -D_HAS_EXCEPTIONS=0
    -DNOMINMAX
    -DANGLE_STANDALONE_BUILD
    -DANGLE_ENABLE_DEBUG_ANNOTATIONS
)

# Create build include dir for autogenerated headers
set(AUTO_GENERATED_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR}/include)
file(MAKE_DIRECTORY ${AUTO_GENERATED_INCLUDE_DIR})

execute_process(
    COMMAND ${ANGLE_SRC_DIR}/src/commit_id.py gen ${CMAKE_CURRENT_BINARY_DIR}/include/angle_commit.h
    OUTPUT_VARIABLE IS_GIT_REPO
    OUTPUT_STRIP_TRAILING_WHITESPACE
)
include_directories(${ANGLE_SRC_DIR}/src ${CMAKE_CURRENT_BINARY_DIR}/include)

##########
# angle_common
# android_util.h/cpp is required and not using android apis
set(ANGLE_COMMON_PLATFORM_LIST
    "_win"
    "_winuwp"
    "linux"
    "_posix"
    "_android"
    "_mac")

if(WINDOWS_DESKTOP)
    list(FILTER ANGLE_COMMON_PLATFORM_LIST EXCLUDE REGEX "_win")
elseif(WINDOWS_STORE)
    list(FILTER ANGLE_COMMON_PLATFORM_LIST EXCLUDE REGEX "_winuwp")
elseif(LINUX)
    list(FILTER ANGLE_COMMON_PLATFORM_LIST EXCLUDE REGEX "linux|_linux|_posix")
elseif(ANDROID)
    list(FILTER ANGLE_COMMON_PLATFORM_LIST EXCLUDE REGEX "_android|_posix")
elseif(APPLE)
    list(FILTER ANGLE_COMMON_PLATFORM_LIST EXCLUDE REGEX "_mac|_posix")
endif()
list(JOIN ANGLE_COMMON_PLATFORM_LIST "|" ANGLE_COMMON_PLATFORM_FILTER)

file(GLOB ANGLE_BASE_SOURCES
    "${ANGLE_SRC_DIR}/src/common/base/anglebase/*.h"
    "${ANGLE_SRC_DIR}/src/common/base/anglebase/*.cc"
    "${ANGLE_SRC_DIR}/src/common/base/anglebase/containers/*.h"
    "${ANGLE_SRC_DIR}/src/common/base/anglebase/numerics/*.h"
    "${ANGLE_SRC_DIR}/src/common/base/anglebase/numerics/*.cc")

file(GLOB ANGLE_COMMON_SOURCES ${ANGLE_BASE_SOURCES}
    "${ANGLE_SRC_DIR}/src/common/*.h"
    "${ANGLE_SRC_DIR}/src/common/*.inl"
    "${ANGLE_SRC_DIR}/src/common/*.cpp"
    "${ANGLE_SRC_DIR}/src/common/linux/*.h"
    "${ANGLE_SRC_DIR}/src/common/linux/*.cpp"
    "${ANGLE_SRC_DIR}/src/common/serializer/*.h"
    "${ANGLE_SRC_DIR}/src/common/serializer/*.cpp"
    "${ANGLE_SRC_DIR}/src/common/third_party/xxhash/*.h"
    "${ANGLE_SRC_DIR}/src/common/third_party/xxhash/*.c"
    "${ANGLE_SRC_DIR}/src/common/third_party/smhasher/src/*.h"
    "${ANGLE_SRC_DIR}/src/common/third_party/smhasher/src/*.cpp")

list(FILTER ANGLE_COMMON_SOURCES EXCLUDE REGEX "_unittest|event_tracer|_apple|_ios|${ANGLE_COMMON_PLATFORM_FILTER}")

add_library(angle_common STATIC ${ANGLE_COMMON_SOURCES})
target_include_directories(angle_common PUBLIC
    ${rapidjson_SOURCE_DIR}/include
    ${ANGLE_SRC_DIR}/src
    ${ANGLE_SRC_DIR}/src/common/base
    ${ANGLE_SRC_DIR}/src/common/third_party/xxhash
    ${ANGLE_SRC_DIR}/src/common/third_party)
target_link_libraries(angle_common PUBLIC compression_utils_portable)
target_compile_definitions(angle_common PUBLIC -DANGLE_HAS_RAPIDJSON)
target_precompile_headers(angle_common INTERFACE ${CMAKE_CURRENT_LIST_DIR}/cmake_inc/platform_override.h)
target_include_directories(angle_common PUBLIC ${ANGLE_SRC_DIR}/include)

if(WIN32)
    target_link_libraries(angle_common PRIVATE shim_synchapi)
endif()

if(CMAKE_CL_64 OR CMAKE_SYSTEM_PROCESSOR MATCHES 64)
    target_compile_definitions(angle_common INTERFACE -DANGLE_IS_64_BIT_CPU)
else()
    target_compile_definitions(angle_common INTERFACE -DANGLE_IS_32_BIT_CPU)
    if(MSVC AND CMAKE_SYSTEM_PROCESSOR MATCHES 86)
        target_compile_options(angle_common INTERFACE -arch:SSE2) # clang-cl, loadimage.cpp
    endif()
endif()

##########
# angle_image_util
file(GLOB ANGLE_IMAGE_UTIL_SOURCES
    "${ANGLE_SRC_DIR}/src/image_util/*.h"
    "${ANGLE_SRC_DIR}/src/image_util/*.inl"
    "${ANGLE_SRC_DIR}/src/image_util/*.cpp")
list(FILTER ANGLE_IMAGE_UTIL_SOURCES EXCLUDE REGEX "_unittest|AstcDecompressor.cpp")
add_library(angle_image_util STATIC ${ANGLE_IMAGE_UTIL_SOURCES})
target_link_libraries(angle_image_util PRIVATE angle_common)

set(ANGLE_GPU_INFO_UTIL_SOURCES ${ANGLE_SRC_DIR}/src/gpu_info_util/SystemInfo.cpp)
if(APPLE)
    list(APPEND ANGLE_GPU_INFO_UTIL_SOURCES ${ANGLE_SRC_DIR}/src/gpu_info_util/SystemInfo_mac.mm)
elseif(WIN32)
    list(APPEND ANGLE_GPU_INFO_UTIL_SOURCES ${ANGLE_SRC_DIR}/src/gpu_info_util/SystemInfo_win.cpp)
elseif(ANDROID)
    list(APPEND ANGLE_GPU_INFO_UTIL_SOURCES ${ANGLE_SRC_DIR}/src/gpu_info_util/SystemInfo_android.cpp)
else()
    list(APPEND ANGLE_GPU_INFO_UTIL_SOURCES ${ANGLE_SRC_DIR}/src/gpu_info_util/SystemInfo_linux.cpp)
endif()

add_library(angle_gpu_info_util STATIC ${ANGLE_GPU_INFO_UTIL_SOURCES})
target_link_libraries(angle_gpu_info_util PRIVATE angle_common)
if(WIN32)
    if(WINDOWS_DESKTOP)
        set_property(SOURCE ${ANGLE_SRC_DIR}/src/gpu_info_util/SystemInfo_win.cpp APPEND PROPERTY COMPILE_FLAGS "-DGPU_INFO_USE_SETUPAPI") # COMPILE_OPTIONS/INCLUDE_DIRECTORIES does not work
        target_link_libraries(angle_gpu_info_util PRIVATE setupapi)
    else()
        set_property(SOURCE ${ANGLE_SRC_DIR}/src/gpu_info_util/SystemInfo_win.cpp APPEND PROPERTY COMPILE_FLAGS "-DGPU_INFO_USE_DXGI") # COMPILE_OPTIONS/INCLUDE_DIRECTORIES does not work
    endif()
endif()

##########
# angle_translator
file(GLOB_RECURSE TRANSLATOR_SOURCES
    "${ANGLE_SRC_DIR}/src/compiler/translator/glslang.l"
    "${ANGLE_SRC_DIR}/src/compiler/translator/glslang.y"
    "${ANGLE_SRC_DIR}/src/compiler/translator/*.h"
    "${ANGLE_SRC_DIR}/src/compiler/translator/*.cpp"
    "${ANGLE_SRC_DIR}/src/third_party/compiler/ArrayBoundsClamper.cpp"
)

list(FILTER TRANSLATOR_SOURCES EXCLUDE REGEX "([/\\])(spirv|msl|ir|wgsl)")

if(NOT WIN32)
    list(FILTER TRANSLATOR_SOURCES EXCLUDE REGEX "HLSL|hlsl")
endif()

if(NOT APPLE)
    list(FILTER TRANSLATOR_SOURCES EXCLUDE REGEX "apple")
endif()

add_library(angle_translator STATIC ${TRANSLATOR_SOURCES})
target_compile_definitions(angle_translator PRIVATE
    -DANGLE_ENABLE_ESSL
    -DANGLE_ENABLE_GLSL
)
if(WIN32)
    target_compile_definitions(angle_translator PRIVATE -DANGLE_ENABLE_HLSL)
endif()

target_link_libraries(angle_translator PRIVATE angle_common)

##########
# angle_preprocessor
file(GLOB PREPROCESSOR_SOURCES
    "${ANGLE_SRC_DIR}/src/compiler/preprocessor/*.h"
    "${ANGLE_SRC_DIR}/src/compiler/preprocessor/*.cpp"
)
add_library(angle_preprocessor STATIC ${PREPROCESSOR_SOURCES})
target_link_libraries(angle_preprocessor PRIVATE angle_common)

##########
# libANGLE

## OpenGL Renderer
if(ANGLE_USE_GL AND WINDOWS_DESKTOP OR LINUX OR APPLE)
    if(WINDOWS_DESKTOP)
        set(ANGLE_RENDERER_OPENGL_PLATFORM 
            "${ANGLE_SRC_DIR}/src/libANGLE/renderer/gl/wgl/*.cpp"
            "${ANGLE_SRC_DIR}/src/libANGLE/renderer/gl/wgl/*.inl"
            "${ANGLE_SRC_DIR}/src/libANGLE/renderer/gl/wgl/*.h"
        )
    elseif(APPLE)
        set(ANGLE_RENDERER_OPENGL_PLATFORM 
            "${ANGLE_SRC_DIR}/src/libANGLE/renderer/gl/cgl/*.mm"
            "${ANGLE_SRC_DIR}/src/libANGLE/renderer/gl/cgl/*.cpp"
            "${ANGLE_SRC_DIR}/src/libANGLE/renderer/gl/cgl/*.inl"
            "${ANGLE_SRC_DIR}/src/libANGLE/renderer/gl/cgl/*.h"
        )
    elseif(LINUX)
        set(ANGLE_RENDERER_OPENGL_PLATFORM 
            "${ANGLE_SRC_DIR}/src/libANGLE/renderer/gl/glx/*.cpp"
            "${ANGLE_SRC_DIR}/src/libANGLE/renderer/gl/glx/*.inl"
            "${ANGLE_SRC_DIR}/src/libANGLE/renderer/gl/glx/*.h"

            "${ANGLE_SRC_DIR}/src/libANGLE/renderer/gl/egl/*.cpp"
            "${ANGLE_SRC_DIR}/src/libANGLE/renderer/gl/egl/*.inl"
            "${ANGLE_SRC_DIR}/src/libANGLE/renderer/gl/egl/*.h"
        )
    endif()

    file(GLOB LIBANGLE_GL_SOURCES
        "${ANGLE_SRC_DIR}/src/libANGLE/renderer/gl/*.cpp"
        "${ANGLE_SRC_DIR}/src/libANGLE/renderer/gl/*.inl"
        "${ANGLE_SRC_DIR}/src/libANGLE/renderer/gl/*.h"

        ${ANGLE_RENDERER_OPENGL_PLATFORM}
    )
    list(FILTER LIBANGLE_GL_SOURCES EXCLUDE REGEX "_unittest")
    add_library(angle_renderer_opengl INTERFACE)
    target_sources(angle_renderer_opengl INTERFACE ${LIBANGLE_GL_SOURCES})
    target_compile_definitions(angle_renderer_opengl INTERFACE
        -DANGLE_ENABLE_OPENGL
        -DANGLE_ENABLE_GL_DESKTOP_BACKEND)
endif()

# D3D Renderers
if(WIN32)
    ## All D3D Sources
    file(GLOB_RECURSE LIBANGLE_D3D_SOURCES
        "${ANGLE_SRC_DIR}/src/libANGLE/renderer/d3d/*.cpp"
        "${ANGLE_SRC_DIR}/src/libANGLE/renderer/d3d/*.inl"
        "${ANGLE_SRC_DIR}/src/libANGLE/renderer/d3d/*.h"
    )
    list(FILTER LIBANGLE_D3D_SOURCES EXCLUDE REGEX "_unittest")

    ## WinRT D3D Renderer
    if(WINDOWS_STORE)
        set(LIBANGLE_D3D_WINRT_SOURCES ${LIBANGLE_D3D_SOURCES})
        list(FILTER LIBANGLE_D3D_WINRT_SOURCES INCLUDE REGEX "winrt")
        add_library(angle_renderer_winrt INTERFACE)
        target_sources(angle_renderer_winrt INTERFACE ${LIBANGLE_D3D_WINRT_SOURCES})
    endif()

    ## Win32/d3d9 D3D Renderer
    if(WINDOWS_DESKTOP)
        set(LIBANGLE_D3D_DESKTOP_SOURCES ${LIBANGLE_D3D_SOURCES})
        if(ANGLE_USE_D3D9)
            list(FILTER LIBANGLE_D3D_DESKTOP_SOURCES INCLUDE REGEX "d3d9|win32")
        else()
            list(FILTER LIBANGLE_D3D_DESKTOP_SOURCES INCLUDE REGEX "win32")
        endif()
        add_library(angle_renderer_win32 INTERFACE)
        target_sources(angle_renderer_win32 INTERFACE ${LIBANGLE_D3D_DESKTOP_SOURCES})
        if(ANGLE_USE_D3D9)
            target_compile_definitions(angle_renderer_win32 INTERFACE -DANGLE_ENABLE_D3D9)
            target_link_libraries(angle_renderer_win32 INTERFACE d3d9)
        endif()
        target_link_libraries(angle_renderer_win32 INTERFACE user32 gdi32)
        if(CMAKE_HOST_WIN32)
            set_property(SOURCE ${ANGLE_SRC_DIR}/src/libANGLE/renderer/d3d/HLSLCompiler.cpp APPEND PROPERTY COMPILE_FLAGS "-DANGLE_PRELOADED_D3DCOMPILER_MODULE_NAMES={\\\"d3dcompiler_47.dll\\\",\\\"d3dcompiler_46.dll\\\",\\\"d3dcompiler_43.dll\\\"}")
        else() # do not let bash expend {xx,oo}
            set_property(SOURCE ${ANGLE_SRC_DIR}/src/libANGLE/renderer/d3d/HLSLCompiler.cpp APPEND PROPERTY COMPILE_FLAGS "-DANGLE_PRELOADED_D3DCOMPILER_MODULE_NAMES='{\"d3dcompiler_47.dll\",\"d3dcompiler_46.dll\",\"d3dcompiler_43.dll\"}'")
        endif()
    endif()

    ## D3D11 Base renderer
    list(FILTER LIBANGLE_D3D_SOURCES EXCLUDE REGEX "converged|winrt|d3d9|win32")
    if(NOT ANGLE_USE_D3D11)
        list(FILTER LIBANGLE_D3D_SOURCES EXCLUDE REGEX "d3d11")
    endif()

    find_library(DXGUID_LIB NAMES dxguid)
    find_library(D3D11_LIB NAMES d3d11)

    add_library(angle_renderer_d3d INTERFACE)
    target_sources(angle_renderer_d3d INTERFACE ${LIBANGLE_D3D_SOURCES})
    target_compile_definitions(angle_renderer_d3d INTERFACE -DANGLE_ENABLE_D3D11)
    target_link_libraries(angle_renderer_d3d INTERFACE dxguid) #${D3D11_LIB} ${DXGUID_LIB})
    if(ANGLE_USE_D3D11)
        target_link_libraries(angle_renderer_d3d INTERFACE d3d11 dxgi)
    endif()
endif()

file(GLOB LIBANGLE_COMMON_SOURCES
    "${ANGLE_SRC_DIR}/src/common/third_party/murmurhash/MurmurHash3.cpp"
    "${ANGLE_SRC_DIR}/src/common/event_tracer.cpp"

    "${ANGLE_SRC_DIR}/src/libANGLE/*.cpp"
    "${ANGLE_SRC_DIR}/src/libANGLE/*.inl"
    "${ANGLE_SRC_DIR}/src/libANGLE/*.h"
)

list(FILTER LIBANGLE_COMMON_SOURCES EXCLUDE REGEX "_unittest")
list(FILTER LIBANGLE_COMMON_SOURCES EXCLUDE REGEX "${ANGLE_SRC_DIR}/src/libANGLE/(CL.*|cl_.*|validationCL.*|cl_utils.*)")

file(GLOB LIBANGLE_CAPTURE_COMMON_SOURCES
    "${ANGLE_SRC_DIR}/src/libANGLE/capture/*.cpp"
    "${ANGLE_SRC_DIR}/src/libANGLE/capture/*.h"
)

list(FILTER LIBANGLE_CAPTURE_COMMON_SOURCES EXCLUDE REGEX "_unittest")
list(FILTER LIBANGLE_CAPTURE_COMMON_SOURCES EXCLUDE REGEX "capture_cl.*|FrameCaptureCL.*|FrameCaptureCommon.*|capture_gles_ext.*")

file(GLOB LIBANGLE_RENDERER_COMMON_SOURCES
    "${ANGLE_SRC_DIR}/src/libANGLE/renderer/*.cpp"
    "${ANGLE_SRC_DIR}/src/libANGLE/renderer/*.inl"
    "${ANGLE_SRC_DIR}/src/libANGLE/renderer/*.h"
)

list(FILTER LIBANGLE_RENDERER_COMMON_SOURCES EXCLUDE REGEX "_unittest")
list(FILTER LIBANGLE_RENDERER_COMMON_SOURCES EXCLUDE REGEX "CL.*|cl.*")
if(NOT WIN32)
    list(FILTER LIBANGLE_RENDERER_COMMON_SOURCES EXCLUDE REGEX "(d3d|dxgi).*|d3d_format\.cpp|d3d_format\.h")
endif()

list(FILTER LIBANGLE_COMMON_SOURCES EXCLUDE REGEX "vk_internal_shaders_autogen")
list(FILTER LIBANGLE_RENDERER_COMMON_SOURCES EXCLUDE REGEX "vk_internal_shaders_autogen")

if(ANGLE_USE_FRAME_CAPTURE)
    list(FILTER LIBANGLE_CAPTURE_COMMON_SOURCES EXCLUDE REGEX "FrameCapture_mock.cpp|serialize_mock.cpp")
else()
    list(FILTER LIBANGLE_CAPTURE_COMMON_SOURCES EXCLUDE REGEX "FrameCapture.cpp|serialize.cpp")
endif()

if(NOT ANGLE_USE_VULKAN AND NOT ANGLE_USE_METAL)
    list(FILTER LIBANGLE_COMMON_SOURCES EXCLUDE REGEX "glslang_wrapper_utils.cpp") # need glslang source
    list(FILTER LIBANGLE_RENDERER_COMMON_SOURCES EXCLUDE REGEX "glslang_wrapper_utils.cpp")
endif()

set(LIBANGLE_SOURCES ${LIBANGLE_COMMON_SOURCES} ${LIBANGLE_CAPTURE_COMMON_SOURCES} ${LIBANGLE_RENDERER_COMMON_SOURCES} ${LIBANGLE_SOURCES_PLATFORM})

set(LIBANGLE_RENDERER_PLATFORM )
if(LINUX OR APPLE)
    set(LIBANGLE_RENDERER_PLATFORM
        angle_renderer_opengl
    )
elseif(WINDOWS_STORE)
    set(LIBANGLE_RENDERER_PLATFORM
        angle_renderer_d3d
        angle_renderer_winrt
    )
elseif(WINDOWS_DESKTOP)
    set(LIBANGLE_RENDERER_PLATFORM
        angle_renderer_d3d
        angle_renderer_win32
    )
    if(ANGLE_USE_GL)
        list(APPEND LIBANGLE_RENDERER_PLATFORM angle_renderer_opengl)
    endif()
endif()

set(LIBANGLE_RENDERER_COMPILEDEF )

if(LINUX)
    find_package(X11 REQUIRED)
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(WAYLAND REQUIRED wayland-client wayland-egl)

    target_link_libraries(angle_common PRIVATE ${X11_LIBRARIES} ${WAYLAND_LIBRARIES})
    set(LIBANGLE_RENDERER_COMPILEDEF
        -DANGLE_USE_X11 -DANGLE_USE_WAYLAND
    )
endif()

add_library(libANGLE STATIC ${LIBANGLE_SOURCES})
set(LIBANGLE_LINKS
    angle_common
    angle_gpu_info_util
    angle_image_util
    angle_translator
    angle_preprocessor
    ${LIBANGLE_RENDERER_PLATFORM}
)

target_link_libraries(libANGLE PRIVATE ${LIBANGLE_LINKS})
target_include_directories(libANGLE PRIVATE "src/third_party/khronos")
target_compile_definitions(libANGLE
    #PRIVATE -DANGLE_ENABLE_NULL
    PUBLIC 
        -DLIBANGLE_IMPLEMENTATION 
        ${LIBANGLE_RENDERER_COMPILEDEF}
        -DANGLE_CAPTURE_ENABLED=$<BOOL:${USE_FRAME_CAPTURE}>
)

##########
# GLESv2
file(GLOB LIBGLESV2_SOURCES
    "${ANGLE_SRC_DIR}/src/libGLESv2/*.cpp"
    "${ANGLE_SRC_DIR}/src/libGLESv2/*.h"
    "${ANGLE_SRC_DIR}/src/libGLESv2/libGLESv2_autogen.def")

list(FILTER LIBGLESV2_SOURCES EXCLUDE REGEX "proc_table_autogen|proc_table_gles_autogen") # unused, and duplicated symbols
list(FILTER LIBGLESV2_SOURCES EXCLUDE REGEX "${ANGLE_SRC_DIR}/src/libGLESv2/(entry_points_cl|cl_stubs|proc_table_cl|cl_dispatch_table).*\\.cpp$")
add_library(libGLESv2 SHARED ${LIBGLESV2_SOURCES})

if(NOT WIN32)
    target_compile_definitions(libGLESv2 PUBLIC "-DEGLAPI=__attribute__\(\(visibility\(\"default\"\)\)\)")
    target_compile_definitions(libGLESv2 PUBLIC "-DGL_APICALL=__attribute__\(\(visibility\(\"default\"\)\)\)")
else()
    target_compile_definitions(libGLESv2 PUBLIC "-DEGLAPI=__declspec\(dllexport\)")
    target_compile_definitions(libGLESv2 PUBLIC "-DGL_APICALL=__declspec\(dllexport\)")
endif()

target_link_libraries(libGLESv2 PRIVATE angle_common libANGLE)
target_compile_definitions(libGLESv2
    PRIVATE -DLIBGLESV2_IMPLEMENTATION
    PUBLIC
        -DGL_GLEXT_PROTOTYPES
        -DGL_GLES_PROTOTYPES
        # static only
        #        -DGL_APICALL=
        #        -DEGLAPI=
        #        -DGL_API=
)

##########
# EGL
file(GLOB LIBEGL_SOURCES
    "${ANGLE_SRC_DIR}/src/libEGL/*.cpp"
    "${ANGLE_SRC_DIR}/src/libEGL/*.h"
    "${ANGLE_SRC_DIR}/src/libEGL/libEGL_autogen.def")

add_library(libEGL SHARED ${LIBEGL_SOURCES})

target_link_libraries(libEGL PUBLIC angle_common)
target_link_libraries(libEGL PRIVATE libANGLE libGLESv2)
target_compile_definitions(libEGL PRIVATE -DLIBEGL_IMPLEMENTATION -DEGL_EGL_PROTOTYPES=1 -DEGL_EGLEXT_PROTOTYPES) # EGL_EGL_PROTOTYPES: function declarations with default visibility via EGLAPI
target_compile_definitions(libEGL PRIVATE -DANGLE_GLESV2_LIBRARY_NAME=libGLESv2 -DANGLE_EGL_LIBRARY_NAME=libEGL) # TODO: option?

SET_TARGET_PROPERTIES(libANGLE PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(libGLESv2 PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(libEGL PROPERTIES PREFIX "")
